@@ -16,6 +16,8 @@
 SERVER_DIR     = @SERVER_DIR@
 GEN            = gen
 
+.phony: unit_tests
+
 if BUILD_UNIT_TESTS
 TESTS = unit/main
 
@@ -26,6 +28,15 @@ unit_main_LDADD   = $(top_builddir)/src/libapachemd.la
 
 unit_main_CFLAGS  = $(CHECK_CFLAGS) -I$(top_srcdir)/src
 unit_main_LDADD  += $(CHECK_LIBS) -l$(LIB_APR) -l$(LIB_APRUTIL)
+
+unit_tests: $(TESTS)
+	@echo "============================= unit tests (check) ==============================="
+	@$(TESTS)
+else
+
+unit_tests: $(TESTS)
+	@echo "unit tests disabled"
+        
 endif
 
 all: $(SERVER_DIR)/.test-setup
@@ -50,7 +61,7 @@ $(SERVER_DIR)/conf/ssl/valid_cert.pem: \
 		-out $(SERVER_DIR)/conf/ssl/valid_cert.pem \
 		-extfile data/ssl/req_exts.conf -extensions v3_req_ext
 
-test: $(SERVER_DIR)/.test-setup
+test: $(SERVER_DIR)/.test-setup unit_tests
 	py.test
 
 test-drive: $(SERVER_DIR)/.test-setup
